# string_search

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
